# multi-notifier-app

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  create_env_files.sh  docker-compose.yaml  env.database.example  env.example  env.example.api.common  env.example.api.database  env.example.broker  env.jwt.example  foo.db  pyproject.toml
alembic/: env.py
alembic/versions/: 272940f75a1b_added_a_user_to_a_notification.py  888f1110030d_added_timezone_to_datetime_colums.py  88c02e77fad7_renaming_field_in_notification_model.py
src/: config.py  constants.py  database.py  main.py
src/alembic/: env.py
src/alembic/versions/: 17758377e421_created_table_user.py  2894ace2a6fa_restructuring_of_notification_model.py  29e9326452c2_added_model_channel.py  41af394bb969_restructiring_notification.py  60148f929544_created_table_notification.py  667d6e1878e8_added_a_user_to_a_notification.py  7f5245aa96ae_added_field_updated_at_to_notification_.py  911e4dd6d2bf_added_support_table_for_observing_.py  92a33de0e968_the_table_notification_schedule_.py  a15f746f6399_added_status_to_notificationschedule.py  d8e93a4d46d0_added_model_for_notification_schedule.py  f618684a7f45_added_status_to_notificationschedule.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/auth/schemas/: __init__.py  user.py
src/auth/services/: __init__.py  auth_service.py  user_service.py
src/background_tasks/: __init__.py  broker.py  config.py  models.py  schemas.py
src/channels/: constants.py  models.py  router.py  schemas.py
src/notification_schedule/: constants.py  models.py  router.py  schemas.py
src/notifications/: __init__.py  constants.py  dependencies.py  exceptions.py  handlers.py  models.py  router.py  routers.py  schemas.py  service.py  services.py
tests/: __init__.py  conftest.py  test_client_builder.py
tests/auth/: conftest.py  test_router.py
tests/notifications/: conftest.py
(+9 files in other folders)
