[project]
name = "multi-notifier-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ushakov Vyacheslav",email = "sombrero.oval@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]

[tool.poetry]
packages = [{include = "multi_notifier_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
